--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "Celia_Baumhoer"
+  twitter          : # Username
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
