--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Munich"
   employer         : "German Aerospace Center"
   uri              : # URL
-  email            : "celia.baumhoer@dlr.de" 
+  email            : "celia.baumhoer@live.de" 
 
   # Academic websites
   googlescholar    : "https://scholar.google.de/citations?user=9AzNhAwAAAAJ&hl=de"
